--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@google/genai": "^1.37.0",
     "react-router-dom": "^7.12.0",
     "lucide-react": "^0.562.0",
-    "reactflow": "11.11.4"
+    "reactflow": "11.11.4",
+    "mongoose": "^9.1.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
